Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>The code is ugly, but the gaming experience is awesome. Feel free to join or fork if you want to be a part of the Spaghetti code.</p>
 
-<p><img src="http://mattias.xn--laserskld-67a.se/NM1.png" alt="Screenshot 1"><img src="http://mattias.xn--laserskld-67a.se/NM2.png" alt="Screenshot 2"></p>
+<p><img src="http://mattias.xn--laserskld-67a.se/hemsida/NM1.png" alt="Screenshot 1"><img src="http://mattias.xn--laserskld-67a.se/hemsida/NM2.png" alt="Screenshot 2"></p>
       </section>
     </div>
 
